samples/_failures_safe/1761149453_3556f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2071d5d5.c: In function ‘print_token’:
./samples/SAFE/__tmp_2071d5d5.c:170:5: error: expected declaration or statement at end of input
  170 |     };
      |     ^
